demo/bad/no_dupe_ns_2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: no-dupes-2
  labels:
          "gatekeeper": "not_duplicated"
